fix align item in membership notification

--- a/app/main.css
+++ b/app/main.css
@@ -354,6 +354,7 @@ li {
 
 #member-header #membership-notification {
   display: flex;
+  align-items: center;
   visibility: hidden;
   gap: 10px;
   margin-top: 35px;
